# src/main/java/org/apiaddicts/apitools/openapi2soapui/request/SoapUIProjectRequest.java
@@ -46,4 +46,7 @@ public class SoapUIProjectRequest {
 
 	@JsonProperty("minimalEndpoints")
 	private Boolean minimalEndpoints;
+
+	@JsonProperty("microcksHeaders")
+	private Boolean microcksHeaders;
 }
